--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run script file
-      run: ./codeprakhar/powerstart.sh
+      run: |
+            chmod +x ./codeprakhar/powerstart.sh
+            ./codeprakhar/powerstart.sh
       shell: bash
